// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components : Common: Publication: Summary table renders correctly 1`] = `
<div>
  <table
    className="table"
  >
    <thead>
      <tr>
        <th
          className="alignLeft borderLeft"
          scope="col"
        >
          <span
            role="text"
          >
            Positive
            <span
              className="headerLabel"
            >
              Tests
            </span>
          </span>
        </th>
        <th
          scope="col"
        >
          <span
            role="text"
          >
            Negative
            <span
              className="headerLabelHidden"
            >
              Tests
            </span>
          </span>
        </th>
        <th
          scope="col"
        >
          <span
            role="text"
          >
            Pending
            <span
              className="headerLabelHidden"
            >
              Tests
            </span>
          </span>
        </th>
        <th
          className="alignLeft borderLeft"
          scope="col"
        >
          <span
            role="text"
          >
            Currently
            <span
              className="headerLabel"
            >
              Hospitalized
            </span>
          </span>
        </th>
        <th
          scope="col"
        >
          <span
            role="text"
          >
            Cumulative
            <span
              className="headerLabelHidden"
            >
              Hospitalized
            </span>
          </span>
        </th>
        <th
          className="alignLeft borderLeft"
          scope="col"
        >
          <span
            role="text"
          >
            Currently
            <span
              className="headerLabel"
            >
              In ICU
            </span>
          </span>
        </th>
        <th
          scope="col"
        >
          <span
            role="text"
          >
            Cumulative
            <span
              className="headerLabelHidden"
            >
              In ICU
            </span>
          </span>
        </th>
        <th
          className="alignLeft borderLeft"
          scope="col"
        >
          <span
            role="text"
          >
            Currently
            <span
              className="headerLabel"
            >
              On Ventilator
            </span>
          </span>
        </th>
        <th
          scope="col"
        >
          <span
            role="text"
          >
            Cumulative
            <span
              className="headerLabelHidden"
            >
              On Ventilator
            </span>
          </span>
        </th>
        <th
          className="alignLeft borderLeft"
          scope="col"
        >
          <span
            role="text"
          >
            Recovered
            <span
              className="headerLabel"
            >
              Outcomes
            </span>
          </span>
        </th>
        <th
          scope="col"
        >
          <span
            role="text"
          >
            Deaths
            <span
              className="headerLabelHidden"
            >
              Outcomes
            </span>
          </span>
        </th>
        <th
          className="alignLeft borderLeft"
          scope="col"
        >
          <span
            role="text"
          >
            Positive + Negative
            <span
              className="headerLabel"
            >
              Total Test Results
            </span>
          </span>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          className=" borderLeft"
        >
          4,572
        </td>
        <td>
          33,318
        </td>
        <td>
          N/A
        </td>
        <td
          className=" borderLeft"
        >
          N/A
        </td>
        <td>
          594
        </td>
        <td
          className=" borderLeft"
        >
          N/A
        </td>
        <td>
          247
        </td>
        <td
          className=" borderLeft"
        >
          N/A
        </td>
        <td>
          148
        </td>
        <td
          className=" borderLeft"
        >
          N/A
        </td>
        <td>
          151
        </td>
        <td
          className=" borderLeft"
        >
          37,890
        </td>
      </tr>
    </tbody>
  </table>
  <div
    className="detail-text detailText"
  >
    Last updated: 
    Wed Apr 1 2020 12:00 am
     
    <abbr
      aria-label="Eastern Standard Time"
      title="Eastern Standard Time"
    >
      EST
    </abbr>
  </div>
</div>
`;

exports[`Components : Common: Publication: Summary table renders correctly 2`] = `
<div>
  <table
    className="table"
  >
    <thead>
      <tr>
        <th
          className="alignLeft borderLeft"
          scope="col"
        >
          <span
            role="text"
          >
            Positive
            <span
              className="headerLabel"
            >
              Tests
            </span>
          </span>
        </th>
        <th
          className="alignLeft "
          scope="col"
        >
          <span
            role="text"
          >
            Negative
            <span
              className="headerLabelHidden"
            >
              Tests
            </span>
          </span>
        </th>
        <th
          className="alignLeft "
          scope="col"
        >
          <span
            role="text"
          >
            Pending
            <span
              className="headerLabelHidden"
            >
              Tests
            </span>
          </span>
        </th>
        <th
          scope="col"
        >
          <span
            role="text"
          />
        </th>
        <th
          scope="col"
        >
          <span
            role="text"
          />
        </th>
        <th
          scope="col"
        >
          <span
            role="text"
          />
        </th>
        <th
          className="alignLeft borderLeft"
          scope="col"
        >
          <span
            role="text"
          >
            Recovered
            <span
              className="headerLabel"
            >
              Outcomes
            </span>
          </span>
        </th>
        <th
          className="alignLeft "
          scope="col"
        >
          <span
            role="text"
          >
            Deaths
            <span
              className="headerLabelHidden"
            >
              Outcomes
            </span>
          </span>
        </th>
        <th
          className="alignLeft borderLeft"
          scope="col"
        >
          <span
            role="text"
          >
            Positive + Negative
            <span
              className="headerLabel"
            >
              Total Test Results
            </span>
          </span>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          className="alignLeft borderLeft"
        >
          4,572
        </td>
        <td
          className="alignLeft "
        >
          33,318
        </td>
        <td
          className="alignLeft "
        >
          N/A
        </td>
        <td />
        <td />
        <td />
        <td
          className="alignLeft borderLeft"
        >
          N/A
        </td>
        <td
          className="alignLeft "
        >
          151
        </td>
        <td
          className="alignLeft borderLeft"
        >
          37,890
        </td>
      </tr>
    </tbody>
  </table>
  <div
    className="detail-text detailText"
  >
    Last updated: 
    Wed Apr 1 2020 12:00 am
     
    <abbr
      aria-label="Eastern Standard Time"
      title="Eastern Standard Time"
    >
      EST
    </abbr>
  </div>
</div>
`;
